# metrics_refbox_msgs

./: CMakeLists.txt  package.xml
msg/: ActivityRecognitionResult.msg  AssessActivityStateResult.msg  BoundingBox2D.msg  ClutteredPickResult.msg  Command.msg  Confirm.msg  GenericTaskResult.msg  GestureRecognitionResult.msg  HandoverObjectResult.msg  HumanRecognitionResult.msg  ItemDeliveryResult.msg  ObjectDetectionResult.msg  PersonDetectionResult.msg  ReceiveObjectResult.msg
