<?xml version="1.0"?>
<package>
  <name>metrics_refbox_msgs</name>
  <version>0.0.1</version>
  <description>common Referee Box messages</description>

  <maintainer email="santosh.thoduka@h-brs.de">Santosh Thoduka</maintainer>

  <license>GPLv3</license>

  <author email="santosh.thoduka@h-brs.de">Santosh Thoduka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>

